syntax = "proto3";

import "Protos/common.proto";

option csharp_namespace = "trb_officer_backend";

package application;

service ApplicationService {
  rpc GetApplicationList (GetApplicationListRequest) returns (GetApplicationListReply);
  rpc GetApplication (GetApplicationRequest) returns (GetApplicationReply);
  rpc ApproveApplication (ApproveApplicationRequest) returns (ApproveApplicationReply);
  rpc RejectApplication (RejectApplicationRequest) returns (RejectApplicationReply);
}

// Get Application List
message GetApplicationListRequest{
  string token = 1;
}
message GetApplicationListReply{
  repeated common.ApplicationShort application = 1;
}

// Get Application Info
message GetApplicationRequest{
  string token = 1;
  string id = 2;
}
message GetApplicationReply{
  common.Application application = 1;
}

// Approve Application
message ApproveApplicationRequest{
  string token = 1;
  string applicationId = 2;
}
message ApproveApplicationReply{
  common.Application application = 1;
}

// Reject Application
message RejectApplicationRequest{
  string token = 1;
  string applicationId = 2;
}
message RejectApplicationReply{
  common.Application application = 1;
}