syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "trb_officer_backend";

package common;

message Tariff{
  string id = 1;
  int64 additionDate = 2;
  string name = 3;
  string description = 4;
  double interestRate = 5;
  string officerId = 6;
}

message UserShort{
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string birthDate = 4;
}

message AccountShort{
  string id = 1;
  int64 balance = 2;
}

message Account{
  string id = 1;
  google.protobuf.Timestamp creationDate = 2;
  google.protobuf.Timestamp closingDate = 3;
  int64 balance = 4;
  string ownerFullName = 5;
  Client owner = 6;
}

message Client{
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  optional string patronymic = 4;
  int64 birthDate = 5;
  string phoneNumber = 6;
  string address = 7;
  string passportNumber = 8;
  optional string passportSeries = 9;
  string email = 10;
  string sex = 11;
  bool blocked = 12;
  optional string whoBlocked = 13;
  optional string whoCreated = 14;
}

message Officer{
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  optional string patronymic = 4;
  int64 birthDate = 5;
  string phoneNumber = 6;
  string address = 7;
  string passportNumber = 8;
  optional string passportSeries = 9;
  string email = 10;
  string sex = 11;
  bool blocked = 12;
  optional string whoBlocked = 13;
  optional string whoCreated = 14;
}